\name{NEWS}
\title{NEWS file for the hyperdraw package}
\encoding{UTF-8}

\section{Changes in version 1.13.1}{
  \itemize{

    \item Node labels were ignoring the 'cex' node data value
    (reported by Hannes Hettling)    

    \item Added "start" and "both" options for "arrowLoc" graph attribute
    (which will draw arrowhead at both ends of hyper edges)

    \item Bug fix for converting Hypergraph to graphBPH so that
    hyperedge names are used as edge labels
    (reported by Hannes Hettling)    
    
  }
}